[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroaihub"
version = "1.0.2"
description = "NeuroAIHub: An AI-Driven Framework for Automated Curation and Discovery of Neuroradiology Datasets"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "openai>=1.0.0",
    "pandas>=1.5.3",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "PyPDF2>=3.0.1",
    "python-dotenv>=1.0.0",
    "tavily>=1.1.0",
    "matplotlib>=3.10.6",
    "seaborn>=0.12.2",
    "openpyxl>=3.1.2",
    "langchain==0.3.0",
    "langchain-openai==0.3.17",
    "langchain-experimental==0.3.4",
    "pydantic>=2.11.4"
]

[tool.setuptools.packages.find]
include = ["neuroaihub*"]

[tool.setuptools.package-data]
neuroaihub = ["NeuroAIHub_Database.xlsx"]

[project.urls]
Homepage = "https://github.com/benyamin-gheiji/neuroaihub"